[gd_scene format=3 uid="uid://co12uak0fy7q3"]

[ext_resource type="Script" uid="uid://c6low23ad5h1k" path="res://scripts/Ui/pause_menu.gd" id="1_n87rw"]

[node name="PauseMenu" type="Control" unique_id=914931070]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n87rw")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=523355611]
layout_mode = 0
offset_left = 683.0
offset_top = 462.0
offset_right = 1140.0
offset_bottom = 592.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1892053545]
layout_mode = 2

[node name="BtnResume" type="Button" parent="MarginContainer/VBoxContainer" unique_id=1401950856]
layout_mode = 2
focus_neighbor_top = NodePath("../BtnMenu")
text = "Resume"

[node name="BtnRestart" type="Button" parent="MarginContainer/VBoxContainer" unique_id=291258041]
layout_mode = 2
text = "Restart"

[node name="BtnMenu" type="Button" parent="MarginContainer/VBoxContainer" unique_id=797188827]
layout_mode = 2
focus_neighbor_bottom = NodePath("../BtnResume")
text = "Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/BtnResume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BtnRestart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BtnMenu" to="." method="_on_menu_pressed"]
